gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/immutable_ctor.d
version https://git-lfs.github.com/spec/v1
oid sha256:0b72e647388d4e62494fb0174a2346503aaa9184817fca4702d864e9be9d490a
size 282
